# titanic

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yaml  manual.yml
app/api/routes/: api.py  predictor.py
app/core/: config.py  errors.py  events.py
app/models/: prediction.py
ml/: pipeline.py
ml/data/: make_dataset.py
ml/features/: build_features.py
ml/model/: dummy_model.pkl  model.pkl  train_model.py
ml/model/examples/: example.json
ml/preprocessing/: clean_dataset.py
tests/: __init__.py  test_app_api_routes_predictor.py  test_app_services_predict.py
